--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,14 +7,13 @@ RUN apt-get update && apt-get install -y iputils-ping netcat vim tmux
 # This is where docker-compose will mount our files inside the container
 WORKDIR /home/proj/src
 
-# Copy sources into src
+# Copy sources into src and build
 COPY . /home/proj/src
-# RUN cd /home/proj/src
-# RUN make
+RUN cd /home/proj/src
+RUN make
 
 # tmux new-session -d './rpc -server'
 #  './rpc -server' : Run ./rpc -server in the new tmux window
 #
 # This allows you to see server log if you attach to the running container and then run `tmux a`
-#CMD ["tmux", "new-session", "./rpc -server"]
 CMD ["tmux", "new-session", "./start_server.sh"]
